basic blog styling for most recent post on writing page

--- a/_posts/2012-5-15-bs-post.md
+++ b/_posts/2012-5-15-bs-post.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Blogging Bullshit
-image: /images/blog/test-image.png
+title: Making of Muke.Me
+image: 
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
